use the better things